--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -5784,19 +5784,19 @@ updateShop()
 function buyPressValue(){
 pressvalue*=1.25;
 pressvalueamt+=1;
-cost7=((cost7+(pressvalue))*12.5);
 if (subpress<1){
 presses-=(Math.trunc(cost7*plowco));
 }
+cost7=((cost7+(pressvalue))*12.5);
 updateShop()
 }
 function buyPressXP(){
 pressxp*=1.25;
 pressxpamt+=1;
-cost8=((cost8+(pressxp))*12.5);
 if (subpress<1){
 presses-=(Math.trunc(cost8*plowco));
 }
+cost8=((cost8+(pressxp))*12.5);
 updateShop()
 }
 function buyOffPower(){
@@ -6339,17 +6339,17 @@ function loadCookie(){
 		document.getElementById("debug12").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("debug13").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("debuggoeshereidiot").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-		document.getElementById("dimenreq").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-		document.getElementById("dimeninfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-		document.getElementById("prestigegain").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
+		document.getElementById("dimenreq").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+		document.getElementById("dimeninfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+		document.getElementById("prestigegain").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("mprestigegain").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-		document.getElementById("presinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
+		document.getElementById("presinfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("mpresinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-		document.getElementById("ascendgain").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
+		document.getElementById("ascendgain").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("mascendgain").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-		document.getElementById("ascendinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
+		document.getElementById("ascendinfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("mascendinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-		document.getElementById("chalinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
+		document.getElementById("chalinfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("pressing").style="cursor: pointer; font-family: 'DSi'; font-size: 2.6em;"
 		document.getElementById("prestige").style="cursor: pointer; font-family: 'DSi'; font-size: 1.3em;"
 		document.getElementById("ascend").style="cursor: pointer; font-family: 'DSi'; font-size: 1.3em;"
@@ -7856,13 +7856,13 @@ document.getElementById("debug11").style="color: #FFFFFF; font-family: 'DSi'; fo
 document.getElementById("debug12").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
 document.getElementById("debug13").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
 document.getElementById("debuggoeshereidiot").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-document.getElementById("dimenreq").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-document.getElementById("dimeninfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-document.getElementById("prestigegain").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-document.getElementById("presinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-document.getElementById("ascendgain").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-document.getElementById("ascendinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
-document.getElementById("chalinfo").style="color: #FFFFFF; font-family: 'DSi'; font-size: 1.3em;"
+document.getElementById("dimenreq").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+document.getElementById("dimeninfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+document.getElementById("prestigegain").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+document.getElementById("presinfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+document.getElementById("ascendgain").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+document.getElementById("ascendinfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
+document.getElementById("chalinfo").style="color: #000000; font-family: 'DSi'; font-size: 1.3em;"
 document.getElementById("pressing").style="cursor: pointer; font-family: 'DSi'; font-size: 2.6em;"
 document.getElementById("prestige").style="cursor: pointer; font-family: 'DSi'; font-size: 1.3em;"
 document.getElementById("ascend").style="cursor: pointer; font-family: 'DSi'; font-size: 1.3em;"
