--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -6402,10 +6402,10 @@ function loadCookie(){
 		document.getElementById("fuelcharger").style="cursor: pointer; position: absolute; right: 0px; top: 0px; font-size: inherit; font-family: inherit"
     }
         if (charger==1){
-        document.getElementById("charger").style.zIndex="1"
+        document.getElementById("charger").style="position: absolute; height: 250px; width: 250px; top: 0px; left: -250px; background-color: #CCCC00; border-color: #FFFFFF; border-width: 1px; color: #FFFFFF; z-index: 1;"
         }
         if (shoptog==1){
-        document.getElementById("shoptog").style.zIndex="1"
+        document.getElementById("shoptog").style="background-color: #CCCCCC;height: 300px;width: 450px;position: absolute;left: 0px;border-color: #888888;border-width: 1px;border-style: solid; bottom: 0px; z-index: 1;"
         }
         var count0=0
         if (auto>0){
