--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -8060,34 +8060,34 @@ updateResets()
 }
 function doAnonymity(){
 if (challengemode==2){
-if (mlevel>=(100*(goals6+1)) && challenge==6){
+if (alevel>=(100*(goals6+1)) && challenge==6){
     goals6+=10
     challenge=0
-    } else if (mlevel>=(90*(goals6+1)) && challenge==6){
+    } else if (alevel>=(90*(goals6+1)) && challenge==6){
     goals6+=9
     challenge=0
-    } else if (mlevel>=(80*(goals6+1)) && challenge==6){
+    } else if (alevel>=(80*(goals6+1)) && challenge==6){
     goals6+=8
     challenge=0
-    } else if (mlevel>=(70*(goals6+1)) && challenge==6){
+    } else if (alevel>=(70*(goals6+1)) && challenge==6){
     goals6+=7
     challenge=0
-    } else if (mlevel>=(60*(goals6+1)) && challenge==6){
+    } else if (alevel>=(60*(goals6+1)) && challenge==6){
     goals6+=6
     challenge=0
-    } else if (mlevel>=(50*(goals6+1)) && challenge==6){
+    } else if (alevel>=(50*(goals6+1)) && challenge==6){
     goals6+=5
     challenge=0
-    } else if (mlevel>=(40*(goals6+1)) && challenge==6){
+    } else if (alevel>=(40*(goals6+1)) && challenge==6){
     goals6+=4
     challenge=0
-    } else if (mlevel>=(30*(goals6+1)) && challenge==6){
+    } else if (alevel>=(30*(goals6+1)) && challenge==6){
     goals6+=3
     challenge=0
-    } else if (mlevel>=(20*(goals6+1)) && challenge==6){
+    } else if (alevel>=(20*(goals6+1)) && challenge==6){
     goals6+=2
     challenge=0
-    } else if (mlevel>=(10*(goals6+1)) && challenge==6){
+    } else if (alevel>=(10*(goals6+1)) && challenge==6){
     goals6+=1
     challenge=0
     }
