patches to reset

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -6001,6 +6001,7 @@ function createCookie(){
         pressingSave.astmax = astmax;
         pressingSave.auto = auto;
         pressingSave.cpoweramt = cpoweramt;
+        pressingSave.ppower = ppower;
         pressingSave.ppoweramt = ppoweramt;
         pressingSave.mpoweramt = mpoweramt;
         pressingSave.pressvalue = pressvalue;
@@ -6937,20 +6938,18 @@ function reset(){
         pressingSave.autocooldown = 0;
         pressingSave.astmax = 60;
         pressingSave.auto = 1;
+        pressingSave.ppower = 0;
         pressingSave.ppoweramt = 0;
-        pressingSave.cursor = 0;
-        pressingSave.cpoweramt = 0;
-        pressingSave.mother = 0;
-        pressingSave.mpoweramt = 0;
-        pressingSave.pressvalue = 0;
-        pressingSave.pressvalueamt = 0;
-        pressingSave.cost7 = 0;
-        pressingSave.pressxp = 0;
-        pressingSave.pressxpamt = 0;
-        pressingSave.cost8 = 0;
-        pressingSave.pressxp = 0;
-        pressingSave.pressxpamt = 0;
-        pressingSave.cost8 = 0;
+        pressingSave.cursor = 1;
+        pressingSave.cpoweramt = 1;
+        pressingSave.mother = 1;
+        pressingSave.mpoweramt = 1;
+        pressingSave.pressvalue = 1;
+        pressingSave.pressvalueamt = 1;
+        pressingSave.cost7 = 15;
+        pressingSave.pressxp = 1;
+        pressingSave.pressxpamt = 1;
+        pressingSave.cost8 = 15;
         pressingSave.apoweramt = 0;
         pressingSave.firstLaunch = Date.now();
         pressingSave.lastSave = Date.now();
@@ -7003,7 +7002,7 @@ function reset(){
         pressingSave.oilywater = 0;
         pressingSave.water = 0;
         pressingSave.oil = 0;
-        pressingSave.asdm = 1;
+        pressingSave.asdm = 0;
         pressingSave.bestprestige = 0;
         pressingSave.totalpresses = 0;
         pressingSave.totalantipresses = 0;
@@ -7028,7 +7027,7 @@ function reset(){
         pressingSave.stars = 0;
         pressingSave.ascXP = 0;
         pressingSave.asccost0 = 0;
-        pressingSave.planets = 0;
+        pressingSave.planets = 1;
         pressingSave.antistrength = 0;
         pressingSave.anticost0 = 15;
         pressingSave.antixp = 0;
@@ -7125,8 +7124,8 @@ function reset(){
         pressingSave.chargesqueezesuccess = 1;
         pressingSave.chargesqueezebonus = 1;
         pressingSave.chargefuel = 1;
-        pressingSave.fuelcost5 = 1;
-        pressingSave.shoptog = 1;
+        pressingSave.fuelcost5 = 64;
+        pressingSave.shoptog = 0;
         pressingSave.challengemode = 2;
     var jsonString = JSON.stringify(pressingSave);
     document.cookie = jsonString;
@@ -8908,6 +8907,7 @@ pressingFile.astmax = astmax;
 pressingFile.auto = auto;
 pressingFile.cpoweramt = cpoweramt;
 pressingFile.ppoweramt = ppoweramt;
+pressingFile.ppower = ppower;
 pressingFile.mpoweramt = mpoweramt;
 pressingFile.pressvalue = pressvalue;
 pressingFile.pressvalueamt = pressvalueamt;
@@ -9120,6 +9120,7 @@ pressingFile.astmax = astmax;
 pressingFile.auto = auto;
 pressingFile.cpoweramt = cpoweramt;
 pressingFile.ppoweramt = ppoweramt;
+pressingFile.ppower = ppower;
 pressingFile.mpoweramt = mpoweramt;
 pressingFile.pressvalue = pressvalue;
 pressingFile.pressvalueamt = pressvalueamt;
@@ -9328,6 +9329,7 @@ pressingFile.astmax = astmax;
 pressingFile.auto = auto;
 pressingFile.cpoweramt = cpoweramt;
 pressingFile.ppoweramt = ppoweramt;
+pressingFile.ppower = ppower;
 pressingFile.mpoweramt = mpoweramt;
 pressingFile.pressvalue = pressvalue;
 pressingFile.pressvalueamt = pressvalueamt;
